1999-05-03  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* main.cc (main): Use create_widget.

	* glclock.h: Add comments.
	(class glclock): Update member functions.
	(class glclock): Add data members: widgets and menu_parent.
	(class glclock): Remove member drawing_area.

	* glclock.cc: Include <algorithm>.
	(create_widget, remove_widget): New function.
	(operator GtkWidget *): Removed.
	(~glclock): Disconnect all signals for each widget.
	(~glclock): Unref context.
	(glclock): Remove the drawing area creation.
	(update): Handle all widgets.
	(update): Create GL context if not created.
	(handle_button_event): Remember the parent widget in menu_parent
	on button-3 press.
	(menu_about, edit_options): Use menu_parent.

	* clockoptions.cc (apply): Change the update rate.  Modify the
	diagnostic log message.
	(create_widget): Use the current update rate.
	(general_options_page): New function.
	(clock_options_dialog): Add an argument.
	(create_widget): Modify the label1 text.

	* glclock.h (class general_options_page): Add new data member
	target and constructor.
	(class clock_options_dialog): Add an argument to constructor.
	Also update all callers.

	* glclock.cc (DEFAULT_TIMEOUT_RATE): Do not defined if defined.

	* glclock.h (class glclock): Add new data member: timeout_rate.
	(class glclock): Add new member functions: update_rate and
	set_update_rate.

	* glclock.cc: Include headers for diagnostics.
	(TIMEOUT_RES, rate_to_interval, DEFALUT_TIMEOUT_RATE): New macro.
	(set_update_rate): New function.
	(glclock): Initialize new members.  Rewrite the timeout
	initialization.

1999-04-29  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Makefile.am (noinst_LIBRARIES): Add libgdkgl.a and libclock.a.
	(libgdkgl_a_SOURCES): Add gdkgl.c.
	(libclock_a_SOURCES): Add simple.c, module.cc, options.cc, and
	clockoptions.cc.
	(rglclock_SOURCES): Remove gdkgl.c.
	(rglclock_SOURCES): Remove files added to libclock_a_SOURCES.
	(rglclock_LDADD): Add libclock.a and libgdkgl.a.
